--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
             <title>UI Assignment</title>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" type="text/css" href="../css/style.css">
+            <link rel="stylesheet" type="text/css" href="./css/style.css">
             <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-            <script src="../scripts/cart.js"></script>
+            <script src="./scripts/cart.js"></script>
         </head>
         <body>
             <div class = "wrapper">
