removed unwanted script

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
                         <Section class = "itemsContainer" >
                         </Section>
                         <Section class = "classCalcContainer">
-                            <div class = "cartItemsContainer"></div>
+                            <div class = "cartItemsContainer">
+                                <div class = tableHeader>
+                                    <div>Item 3</div>
+                                    <div>Qty</div>
+                                    <div>Price</div>
+                                </div>
+                                <div></div>
+                            </div>
                             <div class = "AmountCalcContainer"></div>
                         </Section>
                     </main>
@@ -24,5 +31,4 @@
             </div>
 
         </body>
-        <script src="/__/firebase/6.1.1/firebase-firestore.js"></script>
     </html>
