Total card added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,31 @@
                                     <div class = "no-items">No Items added</div>
                                 </div>
                             </div>
-                            <div class = "AmountCalcContainer"></div>
+                            <div class = "AmountCalcContainer">
+                                <div class = "orderDetails">
+                                    <div>Total</div>
+                                    <div class = "amountContainer">
+                                        <span>Items(2)</span>
+                                        <span>:</span>
+                                        <spna>1233</spna>
+                                    </div>
+                                    <div class = "amountContainer">
+                                        <span>Discount</span>
+                                        <span>:</span>
+                                        <spna>123</spna>
+                                    </div>
+                                    <div class = "amountContainer">
+                                        <span>Type Discount</span>
+                                        <span>:</span>
+                                        <spna>123</spna>
+                                    </div>   
+                                </div>
+                                <div class = "amountContainer order">
+                                    <span>Order Total</span>
+                                    <span>:</span>
+                                    <spna>123</spna>
+                                </div>                             
+                            </div>
                         </Section>
                     </main>
                 </div>
