--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <Section class = "classCalcContainer">
                             <div class = "cartItemsContainer">
                                 <div class = tableHeader>
-                                    <div>Item 3</div>
+                                    <div>Items</div>
                                     <div>Qty</div>
                                     <div>Price</div>
                                 </div>
@@ -29,25 +29,25 @@
                                 <div class = "orderDetails">
                                     <div>Total</div>
                                     <div class = "amountContainer">
-                                        <span>Items(2)</span>
+                                        <span class = "items">Items(2)</span>
                                         <span>:</span>
-                                        <spna>1233</spna>
+                                        <span class = "displayedPrice">1233</span>
                                     </div>
                                     <div class = "amountContainer">
                                         <span>Discount</span>
                                         <span>:</span>
-                                        <spna>123</spna>
+                                        <span>123</span>
                                     </div>
                                     <div class = "amountContainer">
                                         <span>Type Discount</span>
                                         <span>:</span>
-                                        <spna>123</spna>
+                                        <span>$0</span>
                                     </div>   
                                 </div>
                                 <div class = "amountContainer order">
                                     <span>Order Total</span>
                                     <span>:</span>
-                                    <spna>123</spna>
+                                    <span class = "orderTotal">123</span>
                                 </div>                             
                             </div>
                         </Section>
