--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
         <body>
             <div class = "wrapper">
                 <div class = "container">
-                    <h2>All Items</h2>
+                    <header>
+                        <h2>All Items</h2>
+                        <div class = "message">Item Added Sucessfully</div>
+                    </header>
+                    
                     <main>
                         <Section id = "test" class = "itemsContainer" >
                         </Section>
@@ -36,7 +40,7 @@
                                     <div class = "amountContainer">
                                         <span>Discount</span>
                                         <span>:</span>
-                                        <span>123</span>
+                                        <span class = "discountAmount">123</span>
                                     </div>
                                     <div class = "amountContainer">
                                         <span>Type Discount</span>
