--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
             <title>UI Assignment</title>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" type="text/css" href="./css/style.css">
+            <link rel="stylesheet" type="text/css" href="./css/style.css" />
+            <!-- <script src="//cdn.jsdelivr.net/npm/less" ></script> -->
             <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         </head>
         <body>
@@ -18,7 +19,7 @@
                     <main>
                         <Section id = "test" class = "itemsContainer" >
                         </Section>
-                        <Section class = "classCalcContainer">
+                        <Section class = "LeftSideContainer">
                             <div class = "cartItemsContainer">
                                 <div class = tableHeader>
                                     <div>Items</div>
@@ -60,5 +61,7 @@
             </div>
             
         </body>
-        <script src="./scripts/cart.js"></script>
+        <script src="./scripts/index.js"></script>
+        <script src="./scripts/card.js"></script>
+        <script src="./scripts/cartItem.js"></script>
     </html>
