--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@
             </div>
             
         </body>
-        <script src="./scripts/index.js"></script>
+        <script src="../build/main.js"></script>
+        <!-- <script src="./scripts/index.js"></script>
         <script src="./scripts/card.js"></script>
-        <script src="./scripts/cartItem.js"></script>
-        
+        <script src="./scripts/cartItem.js"></script>         -->
     </html>
