--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,6 @@
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link rel="stylesheet" type="text/css" href="./css/style.css" />
-            <!-- <script src="//cdn.jsdelivr.net/npm/less" ></script> -->
-            <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         </head>
         <body>
             <div class = "wrapper">
@@ -61,8 +59,5 @@
             </div>
             
         </body>
-        <script src="../build/main.js"></script>
-        <!-- <script src="./scripts/index.js"></script>
-        <script src="./scripts/card.js"></script>
-        <script src="./scripts/cartItem.js"></script>         -->
+        <script src="./main.js"></script>
     </html>
